miniportugolParser.py
# Generated from miniportugol.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniportugolParser ( Parser ):

    grammarFileName = "miniportugol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'leia'", "'escreva'", "'se'", 
                     "'senao'", "'enquanto'", "'INT'", "'String'", "'*'", 
                     "'/'", "'+'", "'-'", "'=='", "'!='", "'&&'", "'||'", 
                     "'>'", "'<'", "'='", "'('", "')'", "';'", "'{'", "'}'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "WS", "LEIA", "ESCREVA", "SE", "SENAO", 
                      "ENQUANTO", "VAR_INT", "VAR_STRING", "MULT", "DIV", 
                      "MAIS", "MENOS", "COND_IGUAL", "COND_DIF", "COND_E", 
                      "COND_OU", "COND_MAIOR", "COND_MENOR", "IGUAL", "AP", 
                      "FP", "PV", "AC", "FC", "VIRGULA", "ID", "INT", "STRING" ]

    RULE_program = 0
    RULE_expr = 1
    RULE_termo = 2
    RULE_fator = 3
    RULE_bloco = 4
    RULE_condicao = 5
    RULE_lista_comandos = 6
    RULE_declaracao_variavel = 7
    RULE_comando_escreva = 8
    RULE_comando_ler = 9
    RULE_comando_se = 10
    RULE_comando_enquanto = 11
    RULE_comando_definir = 12
    RULE_tipos_variaveis = 13
    RULE_expr_condicionais = 14

    ruleNames =  [ "program", "expr", "termo", "fator", "bloco", "condicao", 
                   "lista_comandos", "declaracao_variavel", "comando_escreva", 
                   "comando_ler", "comando_se", "comando_enquanto", "comando_definir", 
                   "tipos_variaveis", "expr_condicionais" ]

    EOF = Token.EOF
    WS=1
    LEIA=2
    ESCREVA=3
    SE=4
    SENAO=5
    ENQUANTO=6
    VAR_INT=7
    VAR_STRING=8
    MULT=9
    DIV=10
    MAIS=11
    MENOS=12
    COND_IGUAL=13
    COND_DIF=14
    COND_E=15
    COND_OU=16
    COND_MAIOR=17
    COND_MENOR=18
    IGUAL=19
    AP=20
    FP=21
    PV=22
    AC=23
    FC=24
    VIRGULA=25
    ID=26
    INT=27
    STRING=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(miniportugolParser.EOF, 0)

        def declaracao_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Declaracao_variavelContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Declaracao_variavelContext,i)


        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def getRuleIndex(self):
            return miniportugolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = miniportugolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 30
                self.declaracao_variavel()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67108956) != 0):
                self.state = 36
                self.lista_comandos()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(miniportugolParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.TermoContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.TermoContext,i)


        def MAIS(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.MAIS)
            else:
                return self.getToken(miniportugolParser.MAIS, i)

        def MENOS(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.MENOS)
            else:
                return self.getToken(miniportugolParser.MENOS, i)

        def getRuleIndex(self):
            return miniportugolParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = miniportugolParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.termo()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==12:
                self.state = 45
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 46
                self.termo()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.FatorContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.FatorContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.MULT)
            else:
                return self.getToken(miniportugolParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.DIV)
            else:
                return self.getToken(miniportugolParser.DIV, i)

        def getRuleIndex(self):
            return miniportugolParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)




    def termo(self):

        localctx = miniportugolParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.fator()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 53
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 54
                self.fator()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniportugolParser.RULE_fator

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VARIAVELContext(FatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniportugolParser.FatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVARIAVEL" ):
                listener.enterVARIAVEL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVARIAVEL" ):
                listener.exitVARIAVEL(self)


    class NUMEROContext(FatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniportugolParser.FatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(miniportugolParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNUMERO" ):
                listener.enterNUMERO(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNUMERO" ):
                listener.exitNUMERO(self)


    class STRINGContext(FatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniportugolParser.FatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(miniportugolParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTRING" ):
                listener.enterSTRING(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTRING" ):
                listener.exitSTRING(self)


    class PARENTESESContext(FatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniportugolParser.FatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)
        def expr(self):
            return self.getTypedRuleContext(miniportugolParser.ExprContext,0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPARENTESES" ):
                listener.enterPARENTESES(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPARENTESES" ):
                listener.exitPARENTESES(self)



    def fator(self):

        localctx = miniportugolParser.FatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fator)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                localctx = miniportugolParser.NUMEROContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(miniportugolParser.INT)
                pass
            elif token in [28]:
                localctx = miniportugolParser.STRINGContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(miniportugolParser.STRING)
                pass
            elif token in [26]:
                localctx = miniportugolParser.VARIAVELContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.match(miniportugolParser.ID)
                pass
            elif token in [20]:
                localctx = miniportugolParser.PARENTESESContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(miniportugolParser.AP)
                self.state = 64
                self.expr()
                self.state = 65
                self.match(miniportugolParser.FP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AC(self):
            return self.getToken(miniportugolParser.AC, 0)

        def FC(self):
            return self.getToken(miniportugolParser.FC, 0)

        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.Lista_comandosContext,i)


        def getRuleIndex(self):
            return miniportugolParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = miniportugolParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(miniportugolParser.AC)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67108956) != 0):
                self.state = 70
                self.lista_comandos()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(miniportugolParser.FC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.ExprContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.ExprContext,i)


        def expr_condicionais(self):
            return self.getTypedRuleContext(miniportugolParser.Expr_condicionaisContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_condicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicao" ):
                listener.enterCondicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicao" ):
                listener.exitCondicao(self)




    def condicao(self):

        localctx = miniportugolParser.CondicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.expr()
            self.state = 79
            self.expr_condicionais()
            self.state = 80
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_comandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando_escreva(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_escrevaContext,0)


        def comando_ler(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_lerContext,0)


        def comando_se(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_seContext,0)


        def comando_enquanto(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_enquantoContext,0)


        def comando_definir(self):
            return self.getTypedRuleContext(miniportugolParser.Comando_definirContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_lista_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_comandos" ):
                listener.enterLista_comandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_comandos" ):
                listener.exitLista_comandos(self)




    def lista_comandos(self):

        localctx = miniportugolParser.Lista_comandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lista_comandos)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.comando_escreva()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.comando_ler()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.comando_se()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.comando_enquanto()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.comando_definir()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipos_variaveis(self):
            return self.getTypedRuleContext(miniportugolParser.Tipos_variaveisContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.ID)
            else:
                return self.getToken(miniportugolParser.ID, i)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.VIRGULA)
            else:
                return self.getToken(miniportugolParser.VIRGULA, i)

        def getRuleIndex(self):
            return miniportugolParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)




    def declaracao_variavel(self):

        localctx = miniportugolParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracao_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.tipos_variaveis()
            self.state = 90
            self.match(miniportugolParser.ID)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 91
                self.match(miniportugolParser.VIRGULA)
                self.state = 92
                self.match(miniportugolParser.ID)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_escrevaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(miniportugolParser.ESCREVA, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def expr(self):
            return self.getTypedRuleContext(miniportugolParser.ExprContext,0)


        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_escreva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_escreva" ):
                listener.enterComando_escreva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_escreva" ):
                listener.exitComando_escreva(self)




    def comando_escreva(self):

        localctx = miniportugolParser.Comando_escrevaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comando_escreva)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(miniportugolParser.ESCREVA)
            self.state = 101
            self.match(miniportugolParser.AP)
            self.state = 102
            self.expr()
            self.state = 103
            self.match(miniportugolParser.FP)
            self.state = 104
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_lerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEIA(self):
            return self.getToken(miniportugolParser.LEIA, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_ler" ):
                listener.enterComando_ler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_ler" ):
                listener.exitComando_ler(self)




    def comando_ler(self):

        localctx = miniportugolParser.Comando_lerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(miniportugolParser.LEIA)
            self.state = 107
            self.match(miniportugolParser.AP)
            self.state = 108
            self.match(miniportugolParser.ID)
            self.state = 109
            self.match(miniportugolParser.FP)
            self.state = 110
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_seContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(miniportugolParser.SE, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def condicao(self):
            return self.getTypedRuleContext(miniportugolParser.CondicaoContext,0)


        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.BlocoContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.BlocoContext,i)


        def SENAO(self):
            return self.getToken(miniportugolParser.SENAO, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_se

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_se" ):
                listener.enterComando_se(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_se" ):
                listener.exitComando_se(self)




    def comando_se(self):

        localctx = miniportugolParser.Comando_seContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando_se)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(miniportugolParser.SE)
            self.state = 113
            self.match(miniportugolParser.AP)
            self.state = 114
            self.condicao()
            self.state = 115
            self.match(miniportugolParser.FP)
            self.state = 116
            self.bloco()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 117
                self.match(miniportugolParser.SENAO)
                self.state = 118
                self.bloco()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_enquantoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(miniportugolParser.ENQUANTO, 0)

        def AP(self):
            return self.getToken(miniportugolParser.AP, 0)

        def condicao(self):
            return self.getTypedRuleContext(miniportugolParser.CondicaoContext,0)


        def FP(self):
            return self.getToken(miniportugolParser.FP, 0)

        def bloco(self):
            return self.getTypedRuleContext(miniportugolParser.BlocoContext,0)


        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_enquanto" ):
                listener.enterComando_enquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_enquanto" ):
                listener.exitComando_enquanto(self)




    def comando_enquanto(self):

        localctx = miniportugolParser.Comando_enquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comando_enquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(miniportugolParser.ENQUANTO)
            self.state = 122
            self.match(miniportugolParser.AP)
            self.state = 123
            self.condicao()
            self.state = 124
            self.match(miniportugolParser.FP)
            self.state = 125
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_definirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(miniportugolParser.ID, 0)

        def IGUAL(self):
            return self.getToken(miniportugolParser.IGUAL, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniportugolParser.ExprContext)
            else:
                return self.getTypedRuleContext(miniportugolParser.ExprContext,i)


        def PV(self):
            return self.getToken(miniportugolParser.PV, 0)

        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(miniportugolParser.VIRGULA)
            else:
                return self.getToken(miniportugolParser.VIRGULA, i)

        def getRuleIndex(self):
            return miniportugolParser.RULE_comando_definir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_definir" ):
                listener.enterComando_definir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_definir" ):
                listener.exitComando_definir(self)




    def comando_definir(self):

        localctx = miniportugolParser.Comando_definirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comando_definir)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(miniportugolParser.ID)
            self.state = 128
            self.match(miniportugolParser.IGUAL)
            self.state = 129
            self.expr()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 130
                self.match(miniportugolParser.VIRGULA)
                self.state = 131
                self.expr()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(miniportugolParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipos_variaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_INT(self):
            return self.getToken(miniportugolParser.VAR_INT, 0)

        def VAR_STRING(self):
            return self.getToken(miniportugolParser.VAR_STRING, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_tipos_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipos_variaveis" ):
                listener.enterTipos_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipos_variaveis" ):
                listener.exitTipos_variaveis(self)




    def tipos_variaveis(self):

        localctx = miniportugolParser.Tipos_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_tipos_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_condicionaisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COND_IGUAL(self):
            return self.getToken(miniportugolParser.COND_IGUAL, 0)

        def COND_DIF(self):
            return self.getToken(miniportugolParser.COND_DIF, 0)

        def COND_E(self):
            return self.getToken(miniportugolParser.COND_E, 0)

        def COND_OU(self):
            return self.getToken(miniportugolParser.COND_OU, 0)

        def COND_MAIOR(self):
            return self.getToken(miniportugolParser.COND_MAIOR, 0)

        def COND_MENOR(self):
            return self.getToken(miniportugolParser.COND_MENOR, 0)

        def getRuleIndex(self):
            return miniportugolParser.RULE_expr_condicionais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_condicionais" ):
                listener.enterExpr_condicionais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_condicionais" ):
                listener.exitExpr_condicionais(self)



